# qseed

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  requirements.txt  run.py  run.sh  setup.cfg  test.sh  times.py
compiled_circuits/: mapped-grover_5.pkl  mapped-hubbard_4.pkl  mapped-qft_16.pkl  mapped-qft_32.pkl  mapped-qft_5.pkl  mapped-qft_64.pkl  mapped-tfim_16.pkl  mapped-tfim_4.pkl  mapped-tfim_8.pkl  qsearch-mapped-hubbard_4.pkl  qsearch-mapped-hubbard_8.pkl  qsearch-mapped-qft_16.pkl  qsearch-mapped-qft_32.pkl  qsearch-mapped-qft_5.pkl  qsearch-mapped-qft_6.pkl  qsearch-mapped-qft_64.pkl  qsearch-mapped-qft_8.pkl  qsearch-mapped-tfim_16.pkl  qsearch-mapped-tfim_4.pkl  qsearch-mapped-tfim_8.pkl
examples/: learn_and_compile.py  medium_run.py  random_run.py  recforeach.py  recommend.py  static_qft.py  test.py  util.py
examples/qasm/: heisenberg_20.qasm  heisenberg_50.qasm  opt-qft_20.qasm  qft_20.qasm  qft_50.qasm  tfim_20.qasm  tfim_50.qasm
experiments/: get_mins.py  parse.py  run.py  stats.txt
experiments/calls/: qsearch-mapped-add_17  qsearch-mapped-add_41  qsearch-mapped-add_65  qsearch-mapped-heisenberg_16  qsearch-mapped-heisenberg_3  qsearch-mapped-heisenberg_32  qsearch-mapped-heisenberg_4  qsearch-mapped-heisenberg_5  qsearch-mapped-heisenberg_6  qsearch-mapped-heisenberg_64  qsearch-mapped-heisenberg_7  qsearch-mapped-heisenberg_8  (+208 more)
models/: __init__.py  unitary_learner.py
qseed/: __init__.py  cacheloaderpass.py  compiler.py  deletefromdata.py  encoding.py  foreach.py  handler.py  multiseed.py  pauli_foreach.py  pauli_recommender.py  printdata.py  printpass.py  qsearch.py  qsearch_handler.py  qseed.py  qseedpass.py  random_handler.py  randrecforeach.py  recforeach.py  recommender.py  seed.py  structure_recommender.py  test.py  timepass.py  tu_recommender.py  unfold.py
seeds/: seed_circuits_c.pkl
static_seeds/: qft_templates_a.pickle  qft_templates_b.pickle  qft_templates_c.pickle  qft_templates_d.pickle  templates.pickle
templates/: circuits_a.pickle  circuits_b.pickle  templates_a.pickle  templates_b.pickle  templates_c.pickle  templates_d.pickle  to_circuits.py
tests/: test_foreach.py  test_handler.py  test_qseed.py  test_recommender.py  test_topaware_rec.py  test_tu_recommender.py
utils/: __init__.py
(+550 files in other folders)
