[metadata]
name = qseed
version = 0.0.1
description = Quantum Seeded Synthesis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mtweiden/qseed
author = Mathias Weiden
author_email = ...
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Compilers
    Typing :: Typed
keywords = circuit gate quantum synthesis seed
project_urls =
    Bug Tracker = https://github.com/mtweiden/qseed/issues
    Source Code = https://github.com/mtweiden/qseed

[options]
packages = find:
install_requires =
    typing-extensions>=4.0.0
    bqskit>=1.1.0a3
    numpy>=1.24.3
    scipy>=1.10.1
    setuptools>=66.0.0
    torch>=2.0.0
python_requires = >=3.8, <4

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
dev =
    pre-commit
    pytest
    tox

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 2.8
testpaths = tests/
python_files = test*.py
norecursedirs = .env

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
plugins = numpy.typing.mypy_plugin

[tox:tox]
minversion = 3.3.0
envlist = pre-commit,py38,py39,py310,py311
skip_missing_interpreters = true

[testenv]
passenv =
    TERM
deps =
    pytest>=2.8
commands =
    pytest {posargs}

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
